@@ -813,7 +813,7 @@ Reader discretion is strongly advised.</p>
 <h3><a class="toc-backref" href="#toc-entry-49">2.14.5&nbsp;&nbsp;&nbsp;Topics, Sidebars, and Rubrics</a></h3>
 <p><em>Sidebars</em> are like miniature, parallel documents.</p>
 <div class="sidebar">
-<p class="first sidebar-title">Sidebar Title</p>
+<p class="first sidebar-title">Optional Sidebar Title</p>
 <p class="sidebar-subtitle">Optional Subtitle</p>
 <p>This is a sidebar.  It is for text outside the flow of the main
 text.</p>
